--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "law>=0.1.19",
     "mldatafind>=0.1.3",
     "luigi>=3.5.1,<4",
-    "gwpy==3.0.8",
+    "gwpy>=3.0.12",
     "wandb>=0.18.5,<0.19",
     "torch>=2.5.0",
     "s3fs>=2024.12.0,<2025",
