use ml4gw github dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ default-groups = [
     "docs",
 ]
 
+[tool.uv.sources]
+ml4gw = { git = "https://github.com/ML4GW/ml4gw.git" }
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
