--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     { name = "Ethan Marx" },
     { name = "Deep Chatterjee" },
 ]
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "lightray>=0.2.4",
     "numpy<2.0.0",
@@ -27,6 +27,7 @@ dependencies = [
     "wandb>=0.18.5,<0.19",
     "torch>=2.5.0",
     "s3fs>=2024.12.0,<2025",
+    "ligo-skymap>=2.2.2",
 ]
 
 [project.scripts]
@@ -56,6 +57,9 @@ default-groups = [
     "dev",
     "docs",
 ]
+
+[tool.uv.sources]
+ml4gw = { git = "https://github.com/ML4GW/ml4gw.git" }
 
 [build-system]
 requires = ["hatchling"]
