--- a/amplfi/train/configs/similarity/cbc.yaml
+++ b/amplfi/train/configs/similarity/cbc.yaml
@@ -40,7 +40,7 @@ model:
     # add path below when running `trainer.test` to load in a checkpoint
     checkpoint: null
     arch:
-      class_path: amplfi.train.architectures.similarity.SimilarityEmbedding
+      class_path: amplfi.train.architectures.embeddings.SimilarityEmbedding
       init_args:
         embedding:
           class_path: amplfi.train.architectures.embeddings.MultiModalPsd
