--- a/amplfi/train/configs/flow/sg.yaml
+++ b/amplfi/train/configs/flow/sg.yaml
@@ -38,7 +38,7 @@ model:
       class_path: amplfi.train.architectures.NSF
       init_args:
         hidden_features: [512, 512, 512]
-        num_transforms: 20
+        transforms: 20
         randperm: true
         # uncomment below to load 
         # in pre-trained embedding weights
