--- a/amplfi/train/configs/similarity/cbc.yaml
+++ b/amplfi/train/configs/similarity/cbc.yaml
@@ -12,7 +12,7 @@ trainer:
         project: amplfi
         # uncomment and set to name your run
         # name: my-amplfi-run 
-  max_epochs: 400
+  max_epochs: 800
   check_val_every_n_epoch: 1
   log_every_n_steps: 50
   benchmark: false
@@ -54,9 +54,9 @@ model:
               init_args:
                 groups: 8
         expander_factor: 3
-    patience: 5
     learning_rate: 0.00071444
-    weight_decay: 0.0
+    pct_start: 0.1
+    weight_decay: 0.0042
 data:
   class_path: amplfi.train.data.datasets.SimilarityDataset
   init_args:
