--- a/amplfi/train/configs/flow/cbc.yaml
+++ b/amplfi/train/configs/flow/cbc.yaml
@@ -13,7 +13,7 @@ trainer:
         project: amplfi
         # uncomment and set to name your run
         # name: my-amplfi-run 
-  max_epochs: 400
+  max_epochs: 800
   check_val_every_n_epoch: 1
   log_every_n_steps: 50
   benchmark: false
@@ -58,8 +58,8 @@ model:
               class_path: ml4gw.nn.norm.GroupNorm1DGetter
               init_args:
                 groups: 8
-    patience: 40
     learning_rate: 0.00071444
+    pct_start: 0.1
     weight_decay: 0.00042
 data:
   class_path: amplfi.train.data.datasets.FlowDataset
