explicitly add resample method to luigi cfg

--- a/amplfi/data/datagen.cfg
+++ b/amplfi/data/datagen.cfg
@@ -13,6 +13,7 @@ max_duration = 20000
 flag = DATA 
 channels =  &::ifos
 sample_rate = 2048
+resample_method = gwpy
 
 [luigi_FetchTrain]
 workflow = htcondor
@@ -27,7 +28,7 @@ channels = &::luigi_base::channels
 request_memory = 6GB
 request_disk = 1024KB
 request_cpus = 1
-
+resample_method = &::luigi_base::resample_method
 
 [luigi_FetchTest]
 workflow = htcondor
@@ -42,6 +43,7 @@ channels = &::luigi_base::channels
 request_memory = 6GB
 request_disk = 1024KB
 request_cpus = 1
+resample_method = &::luigi_base::resample_method
 
 [logging]
 law.sandbox.base: INFO 
