update mldatafind to support specifying different dq flags for different ifos

--- a/amplfi/data/datagen.cfg
+++ b/amplfi/data/datagen.cfg
@@ -10,7 +10,7 @@ train_start = 1240579783
 train_stop = 1241443783
 test_stop = 1241535783 
 max_duration = 20000
-flag = DATA 
+flags = ["H1_DATA", "L1_DATA"] 
 channels =  &::ifos
 sample_rate = 2048
 resample_method = gwpy
