Allow virgo flags (#234)
* update mldatafind to support specifying different dq flags for different ifos

* update datagne.cfg

--- a/amplfi/data/datagen.cfg
+++ b/amplfi/data/datagen.cfg
@@ -10,7 +10,7 @@ train_start = 1240579783
 train_stop = 1241443783
 test_stop = 1241535783 
 max_duration = 20000
-flag = DATA 
+flags = ["H1_DATA", "L1_DATA"] 
 channels =  &::ifos
 sample_rate = 2048
 resample_method = gwpy
@@ -20,13 +20,13 @@ workflow = htcondor
 start = &::luigi_base::train_start
 end = &::luigi_base::train_stop
 sample_rate = &::luigi_base::sample_rate
-min_duration = 1024
+min_duration = 128
 max_duration = &::luigi_base::max_duration
-flag = &::luigi_base::flag
+flags = &::luigi_base::flags
 ifos = &::luigi_base::ifos
 channels = &::luigi_base::channels
 request_memory = 6GB
-request_disk = 1024KB
+request_disk = 2048KB 
 request_cpus = 1
 resample_method = &::luigi_base::resample_method
 
@@ -35,13 +35,13 @@ workflow = htcondor
 start = &::luigi_base::train_stop
 end = &::luigi_base::test_stop
 sample_rate = &::luigi_base::sample_rate
-min_duration = 128
+min_duration = 128 
 max_duration = &::luigi_base::max_duration
 ifos = &::luigi_base::ifos
-flag = &::luigi_base::flag
+flags = &::luigi_base::flags
 channels = &::luigi_base::channels
 request_memory = 6GB
-request_disk = 1024KB
+request_disk = 2048KB 
 request_cpus = 1
 resample_method = &::luigi_base::resample_method
 
