--- a/amplfi/train/configs/flow/cbc.yaml
+++ b/amplfi/train/configs/flow/cbc.yaml
@@ -64,7 +64,22 @@ model:
 data:
   class_path: amplfi.train.data.datasets.FlowDataset
   init_args:
+    dec: 
+      class_path: ml4gw.distributions.Cosine
+    psi: 
+      class_path: torch.distributions.Uniform
+      init_args:
+        low: 0
+        high: 3.14159
+        validate_args: false
+    phi: 
+      class_path: torch.distributions.Uniform
+      init_args:
+        low: 0
+        high: 6.28318
+        validate_args: false
     data_dir: ${oc.env:AMPLFI_DATADIR}
+    target_prior: null
     inference_params: ["chirp_mass", "mass_ratio", "distance", "phic", "inclination", "dec", "psi", "phi"]
     highpass: 25
     sample_rate: 2048
@@ -82,21 +97,8 @@ data:
       init_args:
         jitter: 0.1
         num_fit_params: 100000
-        parameter_sampler: ./prior.yaml 
-        dec: 
-          class_path: ml4gw.distributions.Cosine
-        psi: 
-          class_path: torch.distributions.Uniform
-          init_args:
-            low: 0
-            high: 3.14159
-            validate_args: false
-        phi: 
-          class_path: torch.distributions.Uniform
-          init_args:
-            low: 0
-            high: 6.28318
-            validate_args: false
+        training_prior: ./prior.yaml
+        testing_prior: null
         num_val_waveforms: 10000
         num_test_waveforms: 200
         approximant: ml4gw.waveforms.IMRPhenomPv2
