--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ exclude = ["kubernetes", "etc"]
 
 [tool.setuptools-git-versioning]
 enabled = true
-dev_template = "{tag}.post{ccount}.{sha}" 
+dev_template = "{tag}.post{ccount}+git.{sha}"
 
 [build-system]
 requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
