--- a/amplfi/train/configs/flow/cbc.yaml
+++ b/amplfi/train/configs/flow/cbc.yaml
@@ -17,26 +17,12 @@ trainer:
   check_val_every_n_epoch: 1
   log_every_n_steps: 50
   benchmark: false
-  callbacks:
-    - class_path: amplfi.train.callbacks.ModelCheckpoint
-      init_args:
-        monitor: "valid_loss"
-        save_top_k: 5
-        save_last: true
-        auto_insert_metric_name : false
-        mode: "min"
-    - class_path: lightning.pytorch.callbacks.LearningRateMonitor
-      init_args:
-        logging_interval: epoch
+  callbacks: ./callbacks.yaml
 model:
   class_path: amplfi.train.models.flow.FlowModel
   init_args:
     train_outdir: ${oc.env:AMPLFI_OUTDIR}
-    nside: 32
-    min_samples_per_pix: 5
     samples_per_event: 10000
-    num_plot: 50
-    plot_data: false
     arch:
       class_path: amplfi.train.architectures.NSF
       init_args:
