--- a/amplfi/train/configs/flow/sg.yaml
+++ b/amplfi/train/configs/flow/sg.yaml
@@ -16,24 +16,12 @@ trainer:
   check_val_every_n_epoch: 1
   log_every_n_steps: 20
   benchmark: false
-  callbacks:
-    - class_path: amplfi.train.callbacks.ModelCheckpoint
-      init_args:
-        monitor: "valid_loss"
-        save_top_k: 5
-        save_last: true
-        auto_insert_metric_name : false
-        mode: "min"
-    - class_path: lightning.pytorch.callbacks.LearningRateMonitor
-      init_args:
-        logging_interval: epoch
+  callbacks: ./callbacks.yaml
 model:
   class_path: amplfi.train.models.flow.FlowModel
   init_args:
     outdir: ${oc.env:AMPLFI_OUTDIR}
-    nside: 32
     samples_per_event: 10000
-    num_corner: 50
     arch:
       class_path: amplfi.train.architectures.NSF
       init_args:
