--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "s3fs>=2024.12.0,<2025",
     "ligo-skymap>=2.2.2",
     "zuko>=1.4.0",
+    "pandas>=2.3.1",
+    "tables>=3.10.1",
 ]
 
 [project.scripts]
