--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,7 @@ dependencies = [
     "s3fs>=2024.12.0,<2025",
     "ligo-skymap>=2.2.2",
     "zuko>=1.4.0",
-    "pandas>=2.3.1",
-    "tables>=3.10.1",
+    "pandas[hdf5]>=2.3.1",
 ]
 
 [project.scripts]
@@ -71,8 +70,6 @@ dev_template = "{tag}.post{ccount}+git.{sha}"
 requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
 build-backend = "setuptools.build_meta"
 
-[tool.uv.sources]
-ml4gw = { git = "https://github.com/ethanmarx/ml4gw", branch="attention" }
 
 [tool.ruff]
 line-length = 79
