Clean up testing datasets (#263)
* update testing datasets

* save indices of input dataframe in output

* update uv lock

* save skymap stats with indices

* use optional hdf5 pandas dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "s3fs>=2024.12.0,<2025",
     "ligo-skymap>=2.2.2",
     "zuko>=1.4.0",
+    "pandas[hdf5]>=2.3.1",
 ]
 
 [project.scripts]
@@ -68,6 +69,7 @@ dev_template = "{tag}.post{ccount}+git.{sha}"
 [build-system]
 requires = [ "setuptools>=77.0.3", "wheel", "setuptools-git-versioning>=2.0,<3",]
 build-backend = "setuptools.build_meta"
+
 
 [tool.ruff]
 line-length = 79
