--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,11 +46,11 @@ dev = [
 ]
 docs = [
     "Sphinx>5.0",
-    "sphinx-rtd-theme>=2.0.0,<3",
-    "myst-parser>=2.0.0,<3",
-    "sphinx-autodoc-typehints>=2.0.0,<3",
-    "linkify-it-py>=2.0.3,<3",
-    "sphinx-tabs>=3.4.7,<4",
+    "sphinx-rtd-theme>=2.0.0",
+    "myst-parser>=2.0.0",
+    "sphinx-autodoc-typehints>=2.0.0",
+    "linkify-it-py>=2.0.3",
+    "sphinx-tabs>=3.4.7",
 ]
 
 [tool.uv]
