--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,16 +9,19 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.10"
+    python: "3.12"
 
   jobs:
-    post_create_environment:
-      # Install uv
-      - pip install uv
-
-    post_install:
+    pre_create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+    create_environment:
+      - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
+    install:
       # Install dependencies
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH uv sync --group docs --active
+      -  UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group docs
+      
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
