--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,6 @@ dependencies = [
     "jsonargparse[signatures]>=4.27.1,<5",
     "urllib3>=1.25.4,<1.27",
     "omegaconf>=2.3.0,<3",
-    "law>=0.1.19",
-    "mldatafind>=0.1.8",
-    "luigi>=3.5.1,<4",
     "gwpy>=3.0.12",
     "wandb>=0.18.5,<0.19",
     "torch>=2.5.0",
@@ -37,6 +34,11 @@ amplfi-flow-cli = "amplfi.train.cli.flow:main"
 amplfi-similarity-cli = "amplfi.train.cli.similarity:main"
 
 [dependency-groups]
+data = [
+    "law>=0.1.19",
+    "mldatafind>=0.1.8",
+    "luigi>=3.5.1,<4",
+]
 dev = [
     "pre-commit>=3.7.0,<4",
     "jupyter>=1.0.0,<2",
