--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,12 +47,12 @@ dev = [
     "ruff>=0.9.6",
 ]
 docs = [
-    "Sphinx>5.0",
+    "Sphinx>=8.0",
     "sphinx-rtd-theme>=2.0.0",
     "myst-parser>=2.0.0",
     "sphinx-autodoc-typehints>=2.0.0",
     "linkify-it-py>=2.0.3",
-    "sphinx-tabs>=3.4.7",
+    "sphinx-design"
 ]
 
 [tool.uv]
