--- a/tests/train/cli/config.yaml
+++ b/tests/train/cli/config.yaml
@@ -32,20 +32,6 @@ data:
   class_path: amplfi.train.data.datasets.FlowDataset
   init_args:
     data_dir: ${oc.env:AMPLFI_DATADIR}
-    dec: 
-      class_path: ml4gw.distributions.Cosine
-    psi: 
-      class_path: torch.distributions.Uniform
-      init_args:
-        low: 0
-        high: 3.14159
-        validate_args: false
-    phi: 
-      class_path: torch.distributions.Uniform
-      init_args:
-        low: 0
-        high: 6.28318
-        validate_args: false
     inference_params: ["chirp_mass", "mass_ratio", "dec", "psi", "phi"]
     highpass: 25
     sample_rate: 512
@@ -71,3 +57,22 @@ data:
         f_min: 20
         f_ref: 40
         right_pad: 0.1
+        dec: 
+          class_path: ml4gw.distributions.Cosine
+        psi: 
+          class_path: torch.distributions.Uniform
+          init_args:
+            low: 0
+            high: 3.14159
+            validate_args: false
+        phi: 
+          class_path: torch.distributions.Uniform
+          init_args:
+            low: 0
+            high: 6.28318
+            validate_args: false
+        parameter_transformer: 
+            class_path: amplfi.train.prior.ParameterTransformer
+            init_args:
+                transforms:
+                    distance: amplfi.train.data.utils.transforms.sample_rescaled_distance
